<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/tip_tv"
        style="@style/font_normal_12_A8A9B1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:text="@string/user_setting_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/phone_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/common_round_white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_tv">

        <TextView
            android:id="@+id/phone_key_tv"
            style="@style/font_light_14_4A4C5C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/user_phone_key" />

        <TextView
            android:id="@+id/phone_value_tv"
            style="@style/font_light_14_4A4C5C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            tools:text="189****1245" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/common_round_white"
        android:padding="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_ll">

        <TextView
            android:id="@+id/old_pas_key_tv"
            style="@style/font_normal_15_4A4C5C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_old_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.baihe.lib_common.ui.widget.font.FontEditText
            android:id="@+id/et_older_pas"
            style="@style/font_normal_15_4A4C5C"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_35"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/user_old_password_hint"
            android:inputType="textPassword"
            android:maxLength="15"
            android:textColorHint="#C5C5CE"
            android:textCursorDrawable="@null"
            app:layout_constraintBottom_toBottomOf="@+id/old_pas_key_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/old_pas_key_tv"
            app:layout_constraintTop_toTopOf="@+id/old_pas_key_tv"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <View
            android:id="@+id/divider_view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/user_color_ECECF0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/old_pas_key_tv" />

        <TextView
            android:id="@+id/new_pas_key_tv"
            style="@style/font_normal_15_4A4C5C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/user_new_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_view1" />

        <com.baihe.lib_common.ui.widget.font.FontEditText
            android:id="@+id/et_new_pas"
            style="@style/font_normal_15_4A4C5C"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_35"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/user_new_password_hint"
            android:inputType="textPassword"
            android:maxLength="15"
            android:textColorHint="#C5C5CE"
            android:textCursorDrawable="@null"
            app:layout_constraintBottom_toBottomOf="@+id/new_pas_key_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/new_pas_key_tv"
            app:layout_constraintTop_toTopOf="@+id/new_pas_key_tv"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <View
            android:id="@+id/divider_view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/user_color_ECECF0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_pas_key_tv" />

        <TextView
            android:id="@+id/push_key_tv"
            style="@style/font_normal_15_4A4C5C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/user_confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_view2" />

        <com.baihe.lib_common.ui.widget.font.FontEditText
            android:id="@+id/et_confirm_pas"
            style="@style/font_normal_15_4A4C5C"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/user_confirm_password_hint"
            android:inputType="textPassword"
            android:maxLength="13"
            android:textColorHint="#C5C5CE"
            android:textCursorDrawable="@null"
            app:layout_constraintBottom_toBottomOf="@+id/push_key_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/push_key_tv"
            app:layout_constraintTop_toTopOf="@+id/push_key_tv"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_top_round_white"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.baihe.lib_common.ui.widget.font.FontTextView
            android:id="@+id/user_btn_commit"
            style="@style/font_half_bold_15_FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:background="@drawable/common_button_round_blue"
            android:gravity="center"
            android:text="@string/user_sure_commit" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>